# app_launcher

./: .autostart.py  .gitignore  ANALISE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  build.py  cleanup.py  debug_check_process.py  install.py  main.py  main.spec  make.py  pyproject.toml  pyrightconfig.json  requirements.txt  settings.json  simulated.py  startup_ui.spec  teste.py
.trunk/: trunk.yaml
assets/: kodi.psd
raw_icons/: app.kra  base_icon.kra  kodi.ico.kra  kodi.kra  missing.kra  pegasus.kra  retropie.ico.kra
scripts/: simulate_cli.py  simulate_programs.py
src/: __init__.py  command_executor.py  default_settings.py  enums.py  insancie.py  instance.py  kodi_manager.py  log.py  settings.py  settings_model.py  utils.py
src/gui/: action_manager.py  app.py  centralized_resolution.py  main.py  tray_icon.py
src/gui/components/: context_menu.py  custom_button.py  device_monitor.py  grid.py  tray_icon.py
src/gui/components/base/: __init__.py
src/gui/icons/: cache_loader.py  icons.qrc  rc_icons.py
src/types/: __init__.py
src/types/protocols/: __init__.py  command.py  device.py
src/types/schemas/: __init__.py  settings.py
tests/: test_check_running_process.py  test_command_executor.py
typings/evdev/: device.pyi  ecodes.pyi  eventio.pyi  eventio_async.pyi  events.pyi  evtest.pyi  ff.pyi  genecodes.pyi  uinput.pyi  util.pyi
typings/memory_profiler/: __init__.pyi
typings/pyudev/: __init__.pyi  _errors.pyi  _qt_base.pyi  _util.pyi  core.pyi  discover.pyi  glib.pyi  monitor.pyi  pyqt4.pyi  pyside6.pyi  version.pyi  wx.pyi
typings/pyudev/_ctypeslib/: __init__.pyi  _errorcheckers.pyi  libc.pyi  libudev.pyi  utils.pyi
typings/pyudev/_os/: __init__.pyi  pipe.pyi  poll.pyi
typings/pyudev/device/: __init__.pyi  _device.pyi
