[project]
name = "app-launcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "black[d]>=26.1.0",
    "evdev~=1.7.1",
    "isort>=7.0.0",
    "more-itertools>=10.8.0",
    "psutil~=5.8.0",
    "pydantic>=2.12.5",
    "pyinstaller>=6.19.0",
    "pyside6~=6.10.2",
    "setproctitle~=1.3.6",
]
